Utils/FBCCompiler/Grammar/FBCParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from FBC.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class FBCParser : Parser {
	public const int
		PUBLIC=1, PRIVATE=2, PROTECTED=3, FLOAT=4, DOUBLE=5, INT64=6, UINT64=7, 
		INT32=8, UINT32=9, INT16=10, UINT16=11, INT8=12, UINT8=13, BOOL=14, STRING=15, 
		GUID=16, SHA1=17, TRUE=18, FALSE=19, CLASS_MEMBER=20, ENUM_MEMBER=21, 
		STRUCT_MEMBER=22, ARRAY=23, LBRACKET=24, RBRACKET=25, LBRACE=26, RBRACE=27, 
		LPAREN=28, RPAREN=29, NATIVE_START=30, MANAGED_START=31, BLOCK_END=32, 
		NAMESPACE=33, CLASS=34, ENUM=35, STRUCT=36, EVENT=37, INCLUDE=38, ALIGN=39, 
		DOT=40, COMMA=41, COLON=42, SEMICOLON=43, DOUBLECOLON=44, EQUALS=45, DASH=46, 
		IDENTIFIER=47, FLOAT_NUMBER=48, INTEGER=49, SINGLE_LINE_COMMENT=50, DELIMITED_COMMENT=51, 
		WHITESPACE=52, ANGLE_STRING=53, QUOTED_STRING=54, WS=55;
	public const int
		RULE_fbc = 0, RULE_accessModifier = 1, RULE_memberType = 2, RULE_integerType = 3, 
		RULE_fileInclude = 4, RULE_includeBlock = 5, RULE_namespaceBlock = 6, 
		RULE_namespace = 7, RULE_namespaceString = 8, RULE_definition = 9, RULE_attributeParam = 10, 
		RULE_attribute = 11, RULE_attributeBlock = 12, RULE_typeContents = 13, 
		RULE_arrayModifier = 14, RULE_typeMember = 15, RULE_typeEvent = 16, RULE_typeNativeFunction = 17, 
		RULE_typeManagedFunction = 18, RULE_blockBody = 19, RULE_classBlock = 20, 
		RULE_classInheritance = 21, RULE_structBlock = 22, RULE_enumBlock = 23, 
		RULE_enumDataType = 24, RULE_enumBody = 25, RULE_enumValue = 26, RULE_enumLastMember = 27, 
		RULE_enumMemberValue = 28, RULE_enumTerminator = 29, RULE_typeAlignment = 30;
	public static readonly string[] ruleNames = {
		"fbc", "accessModifier", "memberType", "integerType", "fileInclude", "includeBlock", 
		"namespaceBlock", "namespace", "namespaceString", "definition", "attributeParam", 
		"attribute", "attributeBlock", "typeContents", "arrayModifier", "typeMember", 
		"typeEvent", "typeNativeFunction", "typeManagedFunction", "blockBody", 
		"classBlock", "classInheritance", "structBlock", "enumBlock", "enumDataType", 
		"enumBody", "enumValue", "enumLastMember", "enumMemberValue", "enumTerminator", 
		"typeAlignment"
	};

	private static readonly string[] _LiteralNames = {
		null, "'public'", "'private'", "'protected'", "'float'", "'double'", "'int64'", 
		"'uint64'", "'int32'", "'uint32'", "'int16'", "'uint16'", "'int8'", "'uint8'", 
		"'bool'", "'string'", "'guid'", "'sha1'", "'true'", "'false'", "'class_member'", 
		"'enum_member'", "'struct_member'", "'array'", "'['", "']'", "'{'", "'}'", 
		"'('", "')'", "'/#N'", "'/#M'", "'#/'", "'namespace'", "'class'", "'enum'", 
		"'struct'", "'event'", "'#include'", "'align'", "'.'", "','", "':'", "';'", 
		"'::'", "'='", "'-'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PUBLIC", "PRIVATE", "PROTECTED", "FLOAT", "DOUBLE", "INT64", "UINT64", 
		"INT32", "UINT32", "INT16", "UINT16", "INT8", "UINT8", "BOOL", "STRING", 
		"GUID", "SHA1", "TRUE", "FALSE", "CLASS_MEMBER", "ENUM_MEMBER", "STRUCT_MEMBER", 
		"ARRAY", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
		"NATIVE_START", "MANAGED_START", "BLOCK_END", "NAMESPACE", "CLASS", "ENUM", 
		"STRUCT", "EVENT", "INCLUDE", "ALIGN", "DOT", "COMMA", "COLON", "SEMICOLON", 
		"DOUBLECOLON", "EQUALS", "DASH", "IDENTIFIER", "FLOAT_NUMBER", "INTEGER", 
		"SINGLE_LINE_COMMENT", "DELIMITED_COMMENT", "WHITESPACE", "ANGLE_STRING", 
		"QUOTED_STRING", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FBC.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public FBCParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class FbcContext : ParserRuleContext {
		public IncludeBlockContext includeBlock() {
			return GetRuleContext<IncludeBlockContext>(0);
		}
		public NamespaceBlockContext namespaceBlock() {
			return GetRuleContext<NamespaceBlockContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(FBCParser.Eof, 0); }
		public DefinitionContext[] definition() {
			return GetRuleContexts<DefinitionContext>();
		}
		public DefinitionContext definition(int i) {
			return GetRuleContext<DefinitionContext>(i);
		}
		public FbcContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fbc; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.EnterFbc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.ExitFbc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBCVisitor<TResult> typedVisitor = visitor as IFBCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFbc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FbcContext fbc() {
		FbcContext _localctx = new FbcContext(Context, State);
		EnterRule(_localctx, 0, RULE_fbc);
		int _la;
		try {
			State = 75;
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 62; includeBlock();
				State = 63; namespaceBlock();
				State = 64; Match(Eof);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 66; includeBlock();
				{
				State = 70;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LBRACKET) | (1L << CLASS) | (1L << ENUM) | (1L << STRUCT) | (1L << SINGLE_LINE_COMMENT) | (1L << DELIMITED_COMMENT))) != 0)) {
					{
					{
					State = 67; definition();
					}
					}
					State = 72;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				}
				State = 73; Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AccessModifierContext : ParserRuleContext {
		public ITerminalNode PUBLIC() { return GetToken(FBCParser.PUBLIC, 0); }
		public ITerminalNode PRIVATE() { return GetToken(FBCParser.PRIVATE, 0); }
		public ITerminalNode PROTECTED() { return GetToken(FBCParser.PROTECTED, 0); }
		public AccessModifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_accessModifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.EnterAccessModifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.ExitAccessModifier(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBCVisitor<TResult> typedVisitor = visitor as IFBCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAccessModifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AccessModifierContext accessModifier() {
		AccessModifierContext _localctx = new AccessModifierContext(Context, State);
		EnterRule(_localctx, 2, RULE_accessModifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			_la = TokenStream.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << PROTECTED))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MemberTypeContext : ParserRuleContext {
		public ITerminalNode FLOAT() { return GetToken(FBCParser.FLOAT, 0); }
		public ITerminalNode DOUBLE() { return GetToken(FBCParser.DOUBLE, 0); }
		public ITerminalNode BOOL() { return GetToken(FBCParser.BOOL, 0); }
		public ITerminalNode STRING() { return GetToken(FBCParser.STRING, 0); }
		public ITerminalNode GUID() { return GetToken(FBCParser.GUID, 0); }
		public ITerminalNode SHA1() { return GetToken(FBCParser.SHA1, 0); }
		public ITerminalNode INT64() { return GetToken(FBCParser.INT64, 0); }
		public ITerminalNode UINT64() { return GetToken(FBCParser.UINT64, 0); }
		public ITerminalNode INT32() { return GetToken(FBCParser.INT32, 0); }
		public ITerminalNode UINT32() { return GetToken(FBCParser.UINT32, 0); }
		public ITerminalNode INT16() { return GetToken(FBCParser.INT16, 0); }
		public ITerminalNode UINT16() { return GetToken(FBCParser.UINT16, 0); }
		public ITerminalNode INT8() { return GetToken(FBCParser.INT8, 0); }
		public ITerminalNode UINT8() { return GetToken(FBCParser.UINT8, 0); }
		public NamespaceStringContext namespaceString() {
			return GetRuleContext<NamespaceStringContext>(0);
		}
		public MemberTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_memberType; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.EnterMemberType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.ExitMemberType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBCVisitor<TResult> typedVisitor = visitor as IFBCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMemberType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MemberTypeContext memberType() {
		MemberTypeContext _localctx = new MemberTypeContext(Context, State);
		EnterRule(_localctx, 4, RULE_memberType);
		try {
			State = 94;
			switch (TokenStream.La(1)) {
			case FLOAT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 79; Match(FLOAT);
				}
				break;
			case DOUBLE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 80; Match(DOUBLE);
				}
				break;
			case BOOL:
				EnterOuterAlt(_localctx, 3);
				{
				State = 81; Match(BOOL);
				}
				break;
			case STRING:
				EnterOuterAlt(_localctx, 4);
				{
				State = 82; Match(STRING);
				}
				break;
			case GUID:
				EnterOuterAlt(_localctx, 5);
				{
				State = 83; Match(GUID);
				}
				break;
			case SHA1:
				EnterOuterAlt(_localctx, 6);
				{
				State = 84; Match(SHA1);
				}
				break;
			case INT64:
				EnterOuterAlt(_localctx, 7);
				{
				State = 85; Match(INT64);
				}
				break;
			case UINT64:
				EnterOuterAlt(_localctx, 8);
				{
				State = 86; Match(UINT64);
				}
				break;
			case INT32:
				EnterOuterAlt(_localctx, 9);
				{
				State = 87; Match(INT32);
				}
				break;
			case UINT32:
				EnterOuterAlt(_localctx, 10);
				{
				State = 88; Match(UINT32);
				}
				break;
			case INT16:
				EnterOuterAlt(_localctx, 11);
				{
				State = 89; Match(INT16);
				}
				break;
			case UINT16:
				EnterOuterAlt(_localctx, 12);
				{
				State = 90; Match(UINT16);
				}
				break;
			case INT8:
				EnterOuterAlt(_localctx, 13);
				{
				State = 91; Match(INT8);
				}
				break;
			case UINT8:
				EnterOuterAlt(_localctx, 14);
				{
				State = 92; Match(UINT8);
				}
				break;
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 15);
				{
				State = 93; namespaceString();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntegerTypeContext : ParserRuleContext {
		public ITerminalNode INT64() { return GetToken(FBCParser.INT64, 0); }
		public ITerminalNode UINT64() { return GetToken(FBCParser.UINT64, 0); }
		public ITerminalNode INT32() { return GetToken(FBCParser.INT32, 0); }
		public ITerminalNode UINT32() { return GetToken(FBCParser.UINT32, 0); }
		public ITerminalNode INT16() { return GetToken(FBCParser.INT16, 0); }
		public ITerminalNode UINT16() { return GetToken(FBCParser.UINT16, 0); }
		public ITerminalNode INT8() { return GetToken(FBCParser.INT8, 0); }
		public ITerminalNode UINT8() { return GetToken(FBCParser.UINT8, 0); }
		public IntegerTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_integerType; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.EnterIntegerType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.ExitIntegerType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBCVisitor<TResult> typedVisitor = visitor as IFBCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntegerType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IntegerTypeContext integerType() {
		IntegerTypeContext _localctx = new IntegerTypeContext(Context, State);
		EnterRule(_localctx, 6, RULE_integerType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			_la = TokenStream.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT64) | (1L << UINT64) | (1L << INT32) | (1L << UINT32) | (1L << INT16) | (1L << UINT16) | (1L << INT8) | (1L << UINT8))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileIncludeContext : ParserRuleContext {
		public ITerminalNode INCLUDE() { return GetToken(FBCParser.INCLUDE, 0); }
		public ITerminalNode ANGLE_STRING() { return GetToken(FBCParser.ANGLE_STRING, 0); }
		public FileIncludeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileInclude; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.EnterFileInclude(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.ExitFileInclude(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBCVisitor<TResult> typedVisitor = visitor as IFBCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFileInclude(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileIncludeContext fileInclude() {
		FileIncludeContext _localctx = new FileIncludeContext(Context, State);
		EnterRule(_localctx, 8, RULE_fileInclude);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98; Match(INCLUDE);
			State = 99; Match(ANGLE_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncludeBlockContext : ParserRuleContext {
		public FileIncludeContext[] fileInclude() {
			return GetRuleContexts<FileIncludeContext>();
		}
		public FileIncludeContext fileInclude(int i) {
			return GetRuleContext<FileIncludeContext>(i);
		}
		public ITerminalNode SINGLE_LINE_COMMENT() { return GetToken(FBCParser.SINGLE_LINE_COMMENT, 0); }
		public ITerminalNode DELIMITED_COMMENT() { return GetToken(FBCParser.DELIMITED_COMMENT, 0); }
		public IncludeBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_includeBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.EnterIncludeBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.ExitIncludeBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBCVisitor<TResult> typedVisitor = visitor as IFBCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncludeBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncludeBlockContext includeBlock() {
		IncludeBlockContext _localctx = new IncludeBlockContext(Context, State);
		EnterRule(_localctx, 10, RULE_includeBlock);
		int _la;
		try {
			State = 110;
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 105;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while (_la==INCLUDE) {
					{
					{
					State = 102; fileInclude();
					}
					}
					State = 107;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 108; Match(SINGLE_LINE_COMMENT);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 109; Match(DELIMITED_COMMENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceBlockContext : ParserRuleContext {
		public NamespaceContext @namespace() {
			return GetRuleContext<NamespaceContext>(0);
		}
		public DefinitionContext[] definition() {
			return GetRuleContexts<DefinitionContext>();
		}
		public DefinitionContext definition(int i) {
			return GetRuleContext<DefinitionContext>(i);
		}
		public ITerminalNode SINGLE_LINE_COMMENT() { return GetToken(FBCParser.SINGLE_LINE_COMMENT, 0); }
		public ITerminalNode DELIMITED_COMMENT() { return GetToken(FBCParser.DELIMITED_COMMENT, 0); }
		public NamespaceBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaceBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.EnterNamespaceBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBCListener typedListener = listener as IFBCListener;
			if (typedListener != null) typedListener.ExitNamespaceBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBCVisitor<TResult> typedVisitor = visitor as IFBCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceBlockContext namespaceBlock() {
		NamespaceBlockContext _localctx = new NamespaceBlockContext(Context, State);
		EnterRule(_localctx, 12, RULE_namespaceBlock);
		int _la;
		try {
			State = 121;
			switch (TokenStream.La(1)) {
			case NAMESPACE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 112; @namespace();
				{
				State = 116;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LBRACKET) | (1L << CLASS) | (1L << ENUM) | (1L << STRUCT) | (1L << SINGLE_LINE_COMMENT) | (1L << DELIMITED_COMMENT))) != 0)) {
					{
					{
					State = 113; definition();
					}
					}
					State = 118;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				}
				}
				break;
			case SINGLE_LINE_COMMENT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 119; Match(SINGLE_LINE_COMMENT);
				}
				break;
			case DELIMITED_COMMENT:
				EnterOuterAlt(_localctx, 3);
				{
				State = 120; Match(DELIMITED_COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
